tests/errors/literals/suffix-wrong-input-type.fn
---
Description: Suffix used with input type that does not match the declared literal
Expected: FN3702
---

type Measure
{
    value: f32
    init{}

    literal px(value: f32)
    {
        return Measure { value: value }
    }
}

type Program
{
    static fn Main -> i32
    {
        var v = "hello"px
        return 0
    }
}
